fix: minor formatting issues
Some errors with spacing were causing rendering problems.
The references to images changed from `/resources/images` to `resources/images` to correct the path.

--- a/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
+++ b/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
@@ -24,9 +24,9 @@ The system design document explains how the tracker program was configured to me
 
 # Background
 
-Reliable epidemiological data is required for staff at all levels of a national TB programme to plan and provide effective tuberculosis care and control services, as well as monitor the performance of programmatic actions. A case-based surveillance system has clear advantages over an aggregate data collection system.  Like an aggregate surveillance system a **_minimum set _**of epidemiological indicators can be captured, validated, aggregated, calculated and displayed but these can be disaggregated by **any combination** of time, location/area, age, sex, case type, previous treatment history, HIV status, drug resistance status and treatment regimens. This helps us to understand TB epidemiology in depth and monitor changes over time. 
+Reliable epidemiological data is required for staff at all levels of a national TB programme to plan and provide effective tuberculosis care and control services, as well as monitor the performance of programmatic actions. A case-based surveillance system has clear advantages over an aggregate data collection system.  Like an aggregate surveillance system a **_minimum set_** of epidemiological indicators can be captured, validated, aggregated, calculated and displayed but these can be disaggregated by **any combination** of time, location/area, age, sex, case type, previous treatment history, HIV status, drug resistance status and treatment regimens. This helps us to understand TB epidemiology in depth and monitor changes over time. 
 
-It is expected that case-based electronic data will result in** improved data quality **because the number of data entry steps are reduced, automatic calculations and validations can be built into the system, inconsistent, erroneous or incomplete data can be corrected or completed rapidly for an individual record and de-duplication can be carried out to remove duplicate records. A case-based surveillance system should also allow the linking of surveillance records to the same case even if a TB case is transferred or referred between facilities during the course of treatment.
+It is expected that case-based electronic data will result in **improved data quality** because the number of data entry steps are reduced, automatic calculations and validations can be built into the system, inconsistent, erroneous or incomplete data can be corrected or completed rapidly for an individual record and de-duplication can be carried out to remove duplicate records. A case-based surveillance system should also allow the linking of surveillance records to the same case even if a TB case is transferred or referred between facilities during the course of treatment.
 
 At the national level, case-based data can either be matched routinely to other data sources, such as HIV or diabetes databases, to measure the burden of co-morbidities and improve patient care, or to other TB data sources to quantify the level of under-reporting of TB cases to the NTP. Matching TB clinical data to TB genotyping data from the laboratory can also lead to the detection and investigation of outbreaks for public health action. 
 
@@ -49,7 +49,7 @@ Workflows in countries may vary and the case surveillance program should be adap
 
 The structure of the program in DHIS2 is as follows: 
 
-![System Design](/resources/images/TB_CS/TB_CS_System_Design.svg)
+![System Design](resources/images/TB_CS/TB_CS_System_Design.svg)
 
 
 # Tracker Program Configuration
@@ -85,11 +85,11 @@ The **event date** for TB Registration is the date of data capture (or reporting
 The TB Registration Event is automatically generated after the enrollment stage.
 
 
-![Enrollment](/resources/images/TB_CS/TB_CS_Enrollment.png)
+![Enrollment](resources/images/TB_CS/TB_CS_Enrollment.png)
 
 The data element **[Current Address (on map)]** is configured as type ‘coordinates’ to enable geospatial analysis in the Maps app. 
 
-The data element **[History of Previous Treatment]** follows the standard WHO definitions: \
+The data element **[History of Previous Treatment]** follows the standard WHO definitions:
 
 |  |  |
 |:---|:---|
@@ -104,7 +104,7 @@ The data element **[History of Previous Treatment]** follows the standard WHO de
 
 Several **program rules** have been configured in this stage to improve data quality and ease of data entry. If the case is not listed with an HIV diagnosis and has not been tested more in more than 6 months, a program rule will show the following warning to prompt re-testing:
 
-![Warning HIV retesting](/resources/images/TB_CS/TB_CS_HIV_Warning.png)
+![Warning HIV retesting](resources/images/TB_CS/TB_CS_HIV_Warning.png)
 
 ## Stage 2: Laboratory Results
 
@@ -117,27 +117,27 @@ The TB Case Surveillance Tracker package allows capturing data for 14 types of d
 
 A sample of the data entry form for select test types is shown below:
 
-![Sputum Smear Microscopy](/resources/images/TB_CS/TB_CS_SSM.png)
+![Sputum Smear Microscopy](resources/images/TB_CS/TB_CS_SSM.png)
 
-![Xpert MTB/RIF](/resources/images/TB_CS/TB_CS_Xpert.png)
+![Xpert MTB/RIF](resources/images/TB_CS/TB_CS_Xpert.png)
 
-![DST](/resources/images/TB_CS/TB_CS_DST.png)
+![DST](resources/images/TB_CS/TB_CS_DST.png)
 
-![DST](/resources/images/TB_CS/TB_CS_LPA.png)
+![DST](resources/images/TB_CS/TB_CS_LPA.png)
 
 Data entered in the Laboratory Stage are used to calculate case and resistance classification using program rules, which can also be displayed in the Top Bar Widget and Feedback widget in the Tracker Capture App. Program uses data elements automatically filled by program rules, including a DE ‘resistance classification’ based on laboratory results. DE’s also include the date when resistance to rifampicin was detected, when resistance was ‘first detected’ in the case of multiple tests in the Status section. These dates are required for specific indicator calculations.
 
 ## Stage 3: Treatment
 
-The treatment stage is a repeatable stage that should be limited to two events to account for _one_ change of treatment regimen. Program rules are used to ensure that the same regimen cannot be entered twice. The **event date** is the ‘**date of treatment initiation**.’ If there is a change in treatment regimen, a second event will be recorded and the date of treatment initiated reflects the initiation of the new treatment regimen. The ‘expected date of treatment initiation’ is automatically scheduled three days from enrollment; it can be rescheduled manually.
+The treatment stage is a repeatable stage that should be limited to two events to account for _one_ change of treatment regimen. Program rules are used to ensure that the same regimen cannot be entered twice. The **event date** is the ‘**date of treatment initiation**’. If there is a change in treatment regimen, a second event will be recorded and the date of treatment initiated reflects the initiation of the new treatment regimen. The ‘expected date of treatment initiation’ is automatically scheduled three days from enrollment; it can be rescheduled manually.
 
-![Treatment](/resources/images/TB_CS/TB_CS_Treatment.png)
+![Treatment](resources/images/TB_CS/TB_CS_Treatment.png)
 
 ### Section: TB Drug Resistance Type Classification
 
 This section allows a user to overwrite the DE [Resistance Classification] that was automatically generated by a Program Rule based on laboratory results in the system. For example, a doctor/clinician may determine classification status other than the one automatically calculated by the formulas included in this program. 
 
-![Assigning resistance classification](/resources/images/TB_CS/TB_CS_Treatment_classification.png)
+![Assigning resistance classification](resources/images/TB_CS/TB_CS_Treatment_classification.png)
 
 ### Section: Treatment Regimen
 
@@ -151,13 +151,13 @@ Capturing treatment start dates are important because outcomes for cases with se
 
 A DE ‘outcome due’ automatically calculates a date using a program rule based on the type of treatment (first-line or second-line) and treatment initiation date. When a treatment regimen is selected, the “Outcome Due” date is calculated and assigned according to the length of that treatment (for first-line treatments, outcome due date is scheduled 9 months from treatment initiation date; for second-line treatment, the outcome date is scheduled for 24 months from treatment initiation date). 
 
-![Outcome due date](/resources/images/TB_CS/TB_CS_Outcome_due.png)
+![Outcome due date](resources/images/TB_CS/TB_CS_Outcome_due.png)
 
 ## Stage 4: Outcome
 
 **Outcome date and due date**
 
-The outcome stage is completed at the end of the enrollment. The **event date** for this program stage is conceptualized as the ‘date of outcome.’ The **event due date** is configured with the description ‘expected date of outcome. By default, the due date for outcome section is scheduled for 180 days after enrollment date.’ Current functionality of DHIS2 v 2.33 does not allow assigning the calculated DE ‘Outcome Due’ from the Treatment stage as the due date for the Outcome stage. The Outcome stage due date may be changed manually, but can only be rescheduled once. For a user, this may be done after Treatment has been initiated and the DE in the Treatment stage ‘Outcome Due’ has been generated. When an Outcome stage is overdue (the current date is later than the calculated DE ‘Outcome due’ from the Treatment stage, a message is displayed in the Feedback Widget. 
+The outcome stage is completed at the end of the enrollment. The **event date** for this program stage is conceptualized as the ‘date of outcome’. The **event due date** is configured with the description ‘expected date of outcome. By default, the due date for outcome section is scheduled for 180 days after enrollment date’. Current functionality of DHIS2 v 2.33 does not allow assigning the calculated DE ‘Outcome Due’ from the Treatment stage as the due date for the Outcome stage. The Outcome stage due date may be changed manually, but can only be rescheduled once. For a user, this may be done after Treatment has been initiated and the DE in the Treatment stage ‘Outcome Due’ has been generated. When an Outcome stage is overdue (the current date is later than the calculated DE ‘Outcome due’ from the Treatment stage, a message is displayed in the Feedback Widget. 
 
 **Treatment Outcome**
 
@@ -165,7 +165,7 @@ When an outcome is selected as part of the option set, program rules show the us
 
 In addition, outcomes ‘cured’, ‘completed’ and ‘not evaluated’ can only be entered after 6 months have passed from the Enrollment Date (date of diagnosis). A treatment outcome of ‘failed’ can only be entered 5 months after the Enrollment Date (date of diagnosis). 
 
-![Outcome](/resources/images/TB_CS/TB_CS_Outcome.png)
+![Outcome](resources/images/TB_CS/TB_CS_Outcome.png)
 
 **Denotifying a TB Case**
 
@@ -175,7 +175,7 @@ This stage also allows a user to ‘denotify’ the TB case. For example, if lab
 
 A prompt **Select an outcome or specify if this is not a TB case.** appears next to the Treatment Outcome triggered by a program rule. It is not possible for the user to complete the Outcome stage without specifying an outcome or denotifying the case. The Outcome stage is configured to block data entry after the stage is completed. 
 
-![Completing outcome stage](/resources/images/TB_CS/TB_CS_Complete_outcome.png)
+![Completing outcome stage](resources/images/TB_CS/TB_CS_Complete_outcome.png)
 
 ## Program Rules
 
@@ -294,6 +294,7 @@ The following feedback messages are configured to display in the Feedback Widget
 |Outcome is overdue.|If the current date is later than the calculated DE ‘Outcome due’ in the treatment section, then the message appears in the feedback widget.|
 |Please immediately complete the treatment outcome.|The “Not TB” checkbox is completed, indicating that a case is not TB and the enrollment should be closed.|
 |Positive smear result recorded. Review the reported "Site of disease".|A positive smear result has been recorded, but the value entered for “Site of disease” does not include “Pulmonary”.|
+
 # Additional features  
 
 
@@ -301,7 +302,7 @@ The following feedback messages are configured to display in the Feedback Widget
 
 TB Case Surveillance Tracker package includes a set of tests and a list of drugs that can be modified by the implementing country according to national context (e.g. which drugs and tests are used/available in country). The use of constants enables a system admin in an implementing country to easily ‘turn on’ or ‘turn off’ types of drugs and tests depending on availability in country. When the complete package is installed into a DHIS2 instance, all data elements for all tests and drugs included in this package are included in the system. By default, all constants are set to ‘1’ (enabling the related data elements for data entry) and can be configured to ‘2’ by an implementer or system admin according to country context if not needed (disabling the related data elements for data entry). If a test or drug later becomes available in the country, an admin can simply re-enable the data elements by changing the constant from a value of ‘2’ to a value of ‘1’. 
 
-![Constants](/resources/images/TB_CS/TB_CS_Constants.png)
+![Constants](resources/images/TB_CS/TB_CS_Constants.png)
 
 # Analytics and program indicators
 
