--- a/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
+++ b/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
@@ -124,7 +124,7 @@ A sample of the data entry form for select test types is shown below:
 
 ![DST](resources/images/TB_CS/TB_CS_DST.png)
 
-![DST](resources/images/TB_CS/TB_CS_LPA.png)
+![LPA](resources/images/TB_CS/TB_CS_LPA.png)
 
 Data entered in the Laboratory Stage are used to calculate case and resistance classification using program rules, which can also be displayed in the Top Bar Widget and Feedback widget in the Tracker Capture App. Program uses data elements automatically filled by program rules, including a DE ‘resistance classification’ based on laboratory results. DE’s also include the date when resistance to rifampicin was detected, when resistance was ‘first detected’ in the case of multiple tests in the Status section. These dates are required for specific indicator calculations.
 
@@ -356,5 +356,5 @@ The following user groups are included in the TB Case Surveillance Tracker Packa
 *   _Digital health for the End TB Strategy: developing priority products and making them work_ ([http://erj.ersjournals.com/content/48/1/29](http://erj.ersjournals.com/content/48/1/29)), especially item 2.2 (Digital notification of TB cases) in the online supplement ([http://erj.ersjournals.com/content/erj/suppl/2016/05/26/13993003.00424-2016.DC1/ERJ-00424-2016_supplement.pdf](http://erj.ersjournals.com/content/erj/suppl/2016/05/26/13993003.00424-2016.DC1/ERJ-00424-2016_supplement.pdf))
 *   _Principles for digital development_ ([https://digitalprinciples.org/](https://digitalprinciples.org/)), in particular the sections on ‘Design With the User’ ([https://digitalprinciples.org/principle/design-with-the-user/](https://digitalprinciples.org/principle/design-with-the-user/)),   ‘Be Data Driven’ ([https://digitalprinciples.org/principle/be-data-driven/](https://digitalprinciples.org/principle/be-data-driven/)) and ‘Address Privacy and Security’ ([https://digitalprinciples.org/principle/address-privacy-security/](https://digitalprinciples.org/principle/address-privacy-security/))
 *   _Policy on the Protection of personal Data of Persons of Concern to UNHCR_ ([http://www.refworld.org/docid/55643c1d4.html](http://www.refworld.org/docid/55643c1d4.html)), particularly chapter 2.
-*   _Ethics guidance for the implementation of the End TB Strateg_y [http://www.who.int/tb/publications/2017/ethics-guidance](http://www.who.int/tb/publications/2017/ethics-guidance)),  pages 40-41 and 53-54 on privacy and security.
+*   _Ethics guidance for the implementation of the End TB Strategy_ [http://www.who.int/tb/publications/2017/ethics-guidance](http://www.who.int/tb/publications/2017/ethics-guidance)),  pages 40-41 and 53-54 on privacy and security.
 *   _WHO guidelines on ethical issues in public health surveillance_ ([http://www.who.int/ethics/publications/public-health-surveillance](http://www.who.int/ethics/publications/public-health-surveillance))
