Added Immunisation and Malaria sections, aligned titles and reviewed links
Added Immunisation and Malaria sections, aligned titles and reviewed links

--- a/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
+++ b/src/commonmark/en/content/metadata/V1.0_TB Case Surveillance System Design.md
@@ -1,9 +1,5 @@
 
-# TB case surveillance program (tracker)
-
-Last updated August 5, 2020
-
-DHIS2 Version compatibility 2.33
+# TB Case Surveillance Program (Tracker)
 
 Link to demo: [who-demos.dhis2.org/tracker_demo](https://who-demos.dhis2.org/tracker_demo)
 
@@ -21,7 +17,7 @@ This document is intended for audiences responsible for implementing TB data sys
 2. TB program focal points responsible for overseeing data collection, management, analysis and reporting functions of the national TB programme
 3. Implementation support specialists, e.g. those providing technical assistance to the TB programme or the core HMIS unit to support & maintain DHIS2 as a national health information system and/or TB data system
 
-The system design document explains how the tracker program was configured to meet the data entry and analysis requirements and support a typical workflow. The document does not include an exhaustive listing of all metadata captured. This document also does not consider the resources and infrastructure needed to implement such a system, such as servers, power, internet connections, backups, training and user support. More information on the TB programme technical aspects informing this system design is available in the _[WHO publication on electronic recording and reporting for tuberculosis care and control](http://www.who.int/tb/publications/electronic_recording_reporting/en/)_. Supplementary implementation guidance for DHIS2 can be found in the [DHIS2 Implementation guide [general]](https://docs.dhis2.org/2.34/en/dhis2_implementation_guide/about-this-guide.html) and [DHIS2 tracker implementation guide](https://docs.dhis2.org/2.34/en/dhis2_implementation_guide)
+The system design document explains how the tracker program was configured to meet the data entry and analysis requirements and support a typical workflow. The document does not include an exhaustive listing of all metadata captured. This document also does not consider the resources and infrastructure needed to implement such a system, such as servers, power, internet connections, backups, training and user support. More information on the TB programme technical aspects informing this system design is available in the _[WHO publication on electronic recording and reporting for tuberculosis care and control](http://www.who.int/tb/publications/electronic_recording_reporting/en/)_. Supplementary implementation guidance for DHIS2 can be found in the [DHIS2 Implementation guide [general]](https://docs.dhis2.org/master/en/dhis2_implementation_guide/about-this-guide.html) and [DHIS2 tracker implementation guide](https://docs.dhis2.org/master/en/dhis2_tracker_implementation_guide/target-audience.html)
 
 ## Background
 
@@ -35,9 +31,7 @@ Finally case-based data can be used in epidemiological observational research st
 
 See principle 2.4, page 16, of _Policy on the Protection of personal Data of Persons of Concern to UNHCR_ ([http://www.refworld.org/docid/55643c1d4.html](http://www.refworld.org/docid/55643c1d4.html))
 
-
 ## System Design Overview
-
 
 ### Use Case
 
@@ -45,37 +39,29 @@ The TB Case Surveillance Tracker enables registration and longitudinal tracking 
 
 Workflows in countries may vary and the case surveillance program should be adapted as needed to local context. For example, this design assumes that a case is first entered into the DHIS2-based electronic registry when baseline information and risk factors become available at a clinical visit. However, the program stages can be re-ordered in contexts where a case may first be entered into the electronic system when a laboratory result becomes available and baseline information entered retrospectively.  
 
-
 ### Program Structure
 
 The structure of the program in DHIS2 is as follows:
 
 ![System Design](resources/images/TB_CS/TB_CS_System_Design.svg)
 
-
 ## Tracker Program Configuration
-
 
 ### Program Details
 
 The **Tracked Entity Type** for this program is a ‘person’. Tracked entity types are often shared across programs in an integrated DHIS2 instance. The program is configured to **require the user to search a minimum 1 attribute** before registering a new TEI.
 
-
 #### Access
 
 The **access** level is configured as **protected** in order to protect personally identifiable data from unauthorized access, The user may search and read tracked entity instances that are owned by the organisation unit to which the user is assigned data capture access. If a user searches for a TEI that exists outside of their organisation unit, that the user does not have data capture authority for, the user is presented with the option to access the patient record by first recording a reason. This approach to privacy is known as ‘breaking the glass’, since it allows the user to perform their work without outside permission or assistance, but leaves a clear trail to be audited. Once the user gives a reason for breaking the glass, then gain temporary ownership of the tracked entity instance (see the [Tracker User Guide](https://docs.dhis2.org/2.34/en/dhis2_user_manual_en/using-the-tracker-capture-app.html#breaking-the-glass) for more information.)
-
 
 ### Enrollment Details
 
 The **enrollment date** is conceptualized as the ‘date of TB diagnosis’. A TEI is allowed to have multiple enrollments, as it is possible that a case would enter the system more than once (i.e. recovers and becomes a case again). In situations where a case was previously enrolled in a TB Case Surveillance tracker, it is possible to see Enrollment History using the [Enrollment Widget](https://docs.dhis2.org/2.33/en/dhis2_user_manual_en/using-the-tracker-capture-app.html#manage-a-teis-enrollments).
 
-
 ### Attributes
 
-
 When a case is enrolled into the TB case surveillance as a tracked entity instance (TEI), TEI attributes are recorded to form the case profile. Note that where the TB tracker program is installed alongside other programs in a DHIS2 instance, these common attributes may be shared across different programs (e.g. first name, last name, date of birth).
-
 
 ### Stage 1: TB Registration
 
@@ -84,7 +70,6 @@ The TB registration stage captures baseline information, risk factors and comorb
 The **event date** for TB Registration is the date of data capture (or reporting) in DHIS2.
 
 The TB Registration Event is automatically generated after the enrollment stage.
-
 
 ![Enrollment](resources/images/TB_CS/TB_CS_Enrollment.png)
 
@@ -101,7 +86,6 @@ The data element **[History of Previous Treatment]** follows the standard WHO de
 |**Treatment after lost to follow-up**|Previously treated patients have received 1 month or more of anti-TB drugs in the past. Treatment after loss to follow-up patients have previously been treated for TB and were declared lost to follow-up at the end of their most recent course of treatment. (These were previously known as treatment after default patients.|
 |**Other previously treated**|Previously treated patients have received 1 month or more of anti-TB drugs in the past. Other previously treated patients are those who have previously been treated for TB but whose outcome after their most recent course of treatment is unknown or undocumented.|
 |**Unknown**|Patients with unknown previous TB treatment history do not fit into any of the categories listed.|
-
 
 Several **program rules** have been configured in this stage to improve data quality and ease of data entry. If the case is not listed with an HIV diagnosis and has not been tested more in more than 6 months, a program rule will show the following warning to prompt re-testing:
 
@@ -249,7 +233,6 @@ This data element is automatically populated by program rules based on the follo
 
 Program rules are used to assign the event date of the Treatment Program stage as DEs for ‘First-line treatment start’ and ‘Second-line treatment start.’ In addition, a DE ‘Expected date of outcome’ is completed by a program rule and included in both the Treatment and Outcome stages. For first-line treatment, the expected outcome date is 9 months from treatment initiation date. For second-line treatment, the expected outcome date is 24 months from treatment initiation. The dates are also used for analysis. For example, the number of days delay in treatment is calculated based on the time between diagnosis and initiation of treatment.
 
-
 #### Illustrative Scenarios
 
 In the context of TB Case Surveillance, combinations of program rules apply the following to difference case scenarios:
@@ -263,9 +246,6 @@ In the context of TB Case Surveillance, combinations of program rules apply the 
 |**Laboratory results have been recorded in DHIS2 and drug resistance has been detected.** No previous treatment event is registered. The case is placed on second-line treatment|Second-line treatment start date is recorded in the status section. Expected date of treatment outcome (24 months from treatment initiation date) is displayed in the status section.|When adding a second Treatment event, the user will be prevented from selecting Second-line treatment in the treatment regimen.|
 |**No laboratory results have been recorded in DHIS2.** Previous treatment event was first-line treatment. The case is placed on second-line treatment.|Second-line treatment start date is recorded in the status section. Expected date of treatment outcome (24 months from treatment initiation date) is displayed in the status section.|It is not possible to create new Treatment events.|
 |**Laboratory results have been recorded in DHIS2 and drug resistance has been detected.** Previous treatment event was First-line Treatment. The case is placed on Second-line Treatment.|Second-line treatment start date is recorded in the status section. Expected date of treatment outcome (24 months from treatment initiation date) is displayed in the status section.|It is not possible to create new Treatment events.|
-
-
-
 
 ### Top Bar Widget
 
@@ -309,14 +289,10 @@ TB Case Surveillance Tracker package includes a set of tests and a list of drugs
 
 This section describes the program indicators and analytics that have been configured for an analytics user.
 
-
 ### Program indicators
-
-
 
 *   Program indicators aggregating
 *   Specific program indicators for case-based systems [defined in the draft spec]
-
 
 ### Reporting case-based data into aggregate TB reports
 
@@ -324,27 +300,20 @@ The TB case-based surveillance tracker captures data that can be fed into standa
 
 In addition, the package comes with a set of indicators that can be fed into a GTB Report form.
 
-
 ### Dashboard
 
 A subset of data visualizations from the WHO Aggregate TB Package have been recreated using program indicators. These visualizations display data from the Tracker program. These visualizations were selected by WHO as the most useful for monitoring at a facility level more frequently, e.g. in between submitting monthly/quarterly aggregate reports to the HMIS. These visualizations may also support the facility or district level user to compare the TB case surveillance data captured in the Tracker Program with the aggregated data submitted to the HMIS.
 
-
 ## User Groups
 
 The following user groups are included in the TB Case Surveillance Tracker Package:
-
-
 
 *   TB Admin: can edit/view metadata; no access to data [all program stages]
 *   TB Data capture: can view metadata, can capture data [all program stages]
 *   TB Access: cam view metadata, can view data [all program stages]
 *   TB Lab data capture: can view metadata, can capture data [TB registration stage and Laboratory stage only]
 
-
 ## References
-
-
 
 *   _Definitions and reporting framework for tuberculosis (2013 revision, updated December 2014)._ ([http://www.who.int/tb/publications/definitions/en](http://www.who.int/tb/publications/definitions/en))
 *   _Understanding and using tuberculosis data._ ([http://www.who.int/tb/publications/understanding_and_using_tb_data/en](http://www.who.int/tb/publications/understanding_and_using_tb_data/en))
