chore: convert html tables to gfm

--- a/developer/web-api/i18n.md
+++ b/developer/web-api/i18n.md
@@ -50,147 +50,48 @@ You can create a translation with a POST request in JSON format:
 
 The properties which support translations are listed in the table below.
 
-<table>
-<caption>Property names</caption>
-<colgroup>
-<col style="width: 50%" />
-<col style="width: 50%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Property name</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>name</td>
-<td>Object name</td>
-</tr>
-<tr class="even">
-<td>shortName</td>
-<td>Object short name</td>
-</tr>
-<tr class="odd">
-<td>description</td>
-<td>Object description</td>
-</tr>
-</tbody>
-</table>
+
+
+Table: Property names
+
+| Property name | Description |
+|---|---|
+| name | Object name |
+| shortName | Object short name |
+| description | Object description |
 
 The classes which support translations are listed in the table below.
 
-<table>
-<caption>Class names</caption>
-<colgroup>
-<col style="width: 34%" />
-<col style="width: 65%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Class name</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>DataElementCategoryOption</td>
-<td>Category option</td>
-</tr>
-<tr class="even">
-<td>DataElementCategory</td>
-<td>Category</td>
-</tr>
-<tr class="odd">
-<td>DataElementCategoryCombo</td>
-<td>Category combination</td>
-</tr>
-<tr class="even">
-<td>DataElement</td>
-<td>Data element</td>
-</tr>
-<tr class="odd">
-<td>DataElementGroup</td>
-<td>Data element group</td>
-</tr>
-<tr class="even">
-<td>DataElementGroupSet</td>
-<td>Data element group set</td>
-</tr>
-<tr class="odd">
-<td>Indicator</td>
-<td>Indicator</td>
-</tr>
-<tr class="even">
-<td>IndicatorType</td>
-<td>Indicator type</td>
-</tr>
-<tr class="odd">
-<td>IndicatorGroup</td>
-<td>Indicator group</td>
-</tr>
-<tr class="even">
-<td>IndicatorGroupSet</td>
-<td>Indicator group set</td>
-</tr>
-<tr class="odd">
-<td>OrganisationUnit</td>
-<td>Organisation unit</td>
-</tr>
-<tr class="even">
-<td>OrganisationUnitGroup</td>
-<td>Organisation unit group</td>
-</tr>
-<tr class="odd">
-<td>OrganisationUnitGroupSet</td>
-<td>Organisation unit group set</td>
-</tr>
-<tr class="even">
-<td>DataSet</td>
-<td>Data set</td>
-</tr>
-<tr class="odd">
-<td>Section</td>
-<td>Data set section</td>
-</tr>
-<tr class="even">
-<td>ValidationRule</td>
-<td>Validation rule</td>
-</tr>
-<tr class="odd">
-<td>ValidationRuleGroup</td>
-<td>Validation rule group</td>
-</tr>
-<tr class="even">
-<td>Program</td>
-<td>Program</td>
-</tr>
-<tr class="odd">
-<td>ProgramStage</td>
-<td>Program stage</td>
-</tr>
-<tr class="even">
-<td>TrackedEntityAttribute</td>
-<td>Tracked entity attribute</td>
-</tr>
-<tr class="odd">
-<td>TrackedEntity</td>
-<td>Tracked entity</td>
-</tr>
-<tr class="even">
-<td>RelationshipType</td>
-<td>Relationship type for tracked entity instances</td>
-</tr>
-<tr class="odd">
-<td>OptionSet</td>
-<td>Option set</td>
-</tr>
-<tr class="even">
-<td>Attribute</td>
-<td>Attribute for metadata</td>
-</tr>
-</tbody>
-</table>
+
+
+Table: Class names
+
+| Class name | Description |
+|---|---|
+| DataElementCategoryOption | Category option |
+| DataElementCategory | Category |
+| DataElementCategoryCombo | Category combination |
+| DataElement | Data element |
+| DataElementGroup | Data element group |
+| DataElementGroupSet | Data element group set |
+| Indicator | Indicator |
+| IndicatorType | Indicator type |
+| IndicatorGroup | Indicator group |
+| IndicatorGroupSet | Indicator group set |
+| OrganisationUnit | Organisation unit |
+| OrganisationUnitGroup | Organisation unit group |
+| OrganisationUnitGroupSet | Organisation unit group set |
+| DataSet | Data set |
+| Section | Data set section |
+| ValidationRule | Validation rule |
+| ValidationRuleGroup | Validation rule group |
+| Program | Program |
+| ProgramStage | Program stage |
+| TrackedEntityAttribute | Tracked entity attribute |
+| TrackedEntity | Tracked entity |
+| RelationshipType | Relationship type for tracked entity instances |
+| OptionSet | Option set |
+| Attribute | Attribute for metadata |
 
 ### Get translations
 
