chore: Section ID conversion to attribute list form

--- a/developer/web-api/i18n.md
+++ b/developer/web-api/i18n.md
@@ -1,8 +1,6 @@
 # I18n
 
-## Locales
-
-<!--DHIS2-SECTION-ID:webapi_locales-->
+## Locales { #webapi_locales } 
 
 DHIS2 supports translations both for the user interface and for database
 content.
@@ -23,9 +21,7 @@ representations are supported.
 
     /api/33/locales/db
 
-## Translations
-
-<!--DHIS2-SECTION-ID:webapi_translations-->
+## Translations { #webapi_translations } 
 
 DHIS2 allows for translations of database content. You can work with
 translations through the Web API using the *translations* resource.
@@ -210,9 +206,7 @@ To get translations for a specific object for all properties:
       &filter=locale:eq:fr&filter=objectId:eq:fbfJHSPpUQD
 
 
-## Internationalization
-
-<!--DHIS2-SECTION-ID:webapi_i18n-->
+## Internationalization { #webapi_i18n } 
 
 In order to retrieve key-value pairs for translated strings you can use
 the *i18n* resource.
