--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -44,7 +44,7 @@ You can create a translation with a POST request in JSON format:
 
     POST /api/33/translations
 
-The properties which support translations are listed in the table below.
+The common properties which support translations are listed in the table below.
 
 
 
@@ -62,15 +62,15 @@ The classes which support translations are listed in the table below.
 
 Table: Class names
 
-| Class name | Description |
-|---|---|
+| Class name | Description | Other translatable Properties
+|---|---|---|
 | DataElementCategoryOption | Category option |
 | DataElementCategory | Category |
 | DataElementCategoryCombo | Category combination |
 | DataElement | Data element |
 | DataElementGroup | Data element group |
 | DataElementGroupSet | Data element group set |
-| Indicator | Indicator |
+| Indicator | Indicator | numeratorDescription, denominatorDescription
 | IndicatorType | Indicator type |
 | IndicatorGroup | Indicator group |
 | IndicatorGroupSet | Indicator group set |
@@ -79,15 +79,21 @@ Table: Class names
 | OrganisationUnitGroupSet | Organisation unit group set |
 | DataSet | Data set |
 | Section | Data set section |
-| ValidationRule | Validation rule |
+| ValidationRule | Validation rule | instruction
 | ValidationRuleGroup | Validation rule group |
-| Program | Program |
-| ProgramStage | Program stage |
+| Program | Program | enrollmentDateLabel, incidentDateLabel
+| ProgramStage | Program stage | executionDateLabel, dueDateLabel
 | TrackedEntityAttribute | Tracked entity attribute |
 | TrackedEntity | Tracked entity |
-| RelationshipType | Relationship type for tracked entity instances |
+| RelationshipType | Relationship type for tracked entity instances | fromToName, toFromName
 | OptionSet | Option set |
 | Attribute | Attribute for metadata |
+| ProgramNotificationTemplate | Program Notification template | subjectTemplate, messageTemplate
+| ValidationNotificationTemplate | Validation Notification template | subjectTemplate, messageTemplate
+| DataSetNotificationTemplate | DataSet Notification template | subjectTemplate, messageTemplate
+| Visualization | Visualization | title, subtitle, rangeAxisLabel, baseLineLabel, targetLineLabel, domainAxisLabel
+| ProgramRuleAction | Program Rule Actions | content
+ 
 
 ### Get translations
 
