--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -62,37 +62,37 @@ The classes which support translations are listed in the table below.
 
 Table: Class names
 
-| Class name | Description | Other translatable Properties
+| Class name | Description | Other translatable Properties |
 |---|---|---|
-| DataElementCategoryOption | Category option |
-| DataElementCategory | Category |
-| DataElementCategoryCombo | Category combination |
-| DataElement | Data element |
-| DataElementGroup | Data element group |
-| DataElementGroupSet | Data element group set |
-| Indicator | Indicator | numeratorDescription, denominatorDescription
-| IndicatorType | Indicator type |
+| DataElementCategoryOption | Category option | |
+| DataElementCategory | Category | |
+| DataElementCategoryCombo | Category combination | |
+| DataElement | Data element | |
+| DataElementGroup | Data element group | |
+| DataElementGroupSet | Data element group set | |
+| Indicator | Indicator | numeratorDescription, denominatorDescription |
+| IndicatorType | Indicator type | |
 | IndicatorGroup | Indicator group |
-| IndicatorGroupSet | Indicator group set |
-| OrganisationUnit | Organisation unit |
-| OrganisationUnitGroup | Organisation unit group |
-| OrganisationUnitGroupSet | Organisation unit group set |
-| DataSet | Data set |
-| Section | Data set section |
-| ValidationRule | Validation rule | instruction
-| ValidationRuleGroup | Validation rule group |
-| Program | Program | enrollmentDateLabel, incidentDateLabel
-| ProgramStage | Program stage | executionDateLabel, dueDateLabel
-| TrackedEntityAttribute | Tracked entity attribute |
-| TrackedEntity | Tracked entity |
-| RelationshipType | Relationship type for tracked entity instances | fromToName, toFromName
-| OptionSet | Option set |
-| Attribute | Attribute for metadata |
-| ProgramNotificationTemplate | Program Notification template | subjectTemplate, messageTemplate
-| ValidationNotificationTemplate | Validation Notification template | subjectTemplate, messageTemplate
-| DataSetNotificationTemplate | DataSet Notification template | subjectTemplate, messageTemplate
-| Visualization | Visualization | title, subtitle, rangeAxisLabel, baseLineLabel, targetLineLabel, domainAxisLabel
-| ProgramRuleAction | Program Rule Actions | content
+| IndicatorGroupSet | Indicator group set | |
+| OrganisationUnit | Organisation unit | |
+| OrganisationUnitGroup | Organisation unit group | |
+| OrganisationUnitGroupSet | Organisation unit group set | |
+| DataSet | Data set | |
+| Section | Data set section | |
+| ValidationRule | Validation rule | instruction |
+| ValidationRuleGroup | Validation rule group | |
+| Program | Program | enrollmentDateLabel, incidentDateLabel |
+| ProgramStage | Program stage | executionDateLabel, dueDateLabel |
+| TrackedEntityAttribute | Tracked entity attribute | |
+| TrackedEntity | Tracked entity | |
+| RelationshipType | Relationship type for tracked entity instances | fromToName, toFromName |
+| OptionSet | Option set | |
+| Attribute | Attribute for metadata | |
+| ProgramNotificationTemplate | Program Notification template | subjectTemplate, messageTemplate |
+| ValidationNotificationTemplate | Validation Notification template | subjectTemplate, messageTemplate |
+| DataSetNotificationTemplate | DataSet Notification template | subjectTemplate, messageTemplate |
+| Visualization | Visualization | title, subtitle, rangeAxisLabel, baseLineLabel, targetLineLabel, domainAxisLabel |
+| ProgramRuleAction | Program Rule Actions | content |
  
 
 ### Get translations
