--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -72,7 +72,7 @@ Table: Class names
 | DataElementGroupSet | Data element group set | |
 | Indicator | Indicator | numeratorDescription, denominatorDescription |
 | IndicatorType | Indicator type | |
-| IndicatorGroup | Indicator group |
+| IndicatorGroup | Indicator group | |
 | IndicatorGroupSet | Indicator group set | |
 | OrganisationUnit | Organisation unit | |
 | OrganisationUnitGroup | Organisation unit group | |
