feat: doc for new dataApproval authorities and other translation properties (#770)
* feat: doc for new dataApproval authorities

* feat: doc for new translation properties

* fix: keep all trailing pipes

It is recommended to keep all leading and trailing pipes to avoid markdown parsing ambiguities.

* tweak

Co-authored-by: Philip-Larsen-Donnelly <35666657+Philip-Larsen-Donnelly@users.noreply.github.com>

--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -44,7 +44,7 @@ You can create a translation with a POST request in JSON format:
 
     POST /api/33/translations
 
-The properties which support translations are listed in the table below.
+The common properties which support translations are listed in the table below.
 
 
 
@@ -62,32 +62,38 @@ The classes which support translations are listed in the table below.
 
 Table: Class names
 
-| Class name | Description |
-|---|---|
-| DataElementCategoryOption | Category option |
-| DataElementCategory | Category |
-| DataElementCategoryCombo | Category combination |
-| DataElement | Data element |
-| DataElementGroup | Data element group |
-| DataElementGroupSet | Data element group set |
-| Indicator | Indicator |
-| IndicatorType | Indicator type |
-| IndicatorGroup | Indicator group |
-| IndicatorGroupSet | Indicator group set |
-| OrganisationUnit | Organisation unit |
-| OrganisationUnitGroup | Organisation unit group |
-| OrganisationUnitGroupSet | Organisation unit group set |
-| DataSet | Data set |
-| Section | Data set section |
-| ValidationRule | Validation rule |
-| ValidationRuleGroup | Validation rule group |
-| Program | Program |
-| ProgramStage | Program stage |
-| TrackedEntityAttribute | Tracked entity attribute |
-| TrackedEntity | Tracked entity |
-| RelationshipType | Relationship type for tracked entity instances |
-| OptionSet | Option set |
-| Attribute | Attribute for metadata |
+| Class name | Description | Other translatable Properties |
+|---|---|---|
+| DataElementCategoryOption | Category option | |
+| DataElementCategory | Category | |
+| DataElementCategoryCombo | Category combination | |
+| DataElement | Data element | |
+| DataElementGroup | Data element group | |
+| DataElementGroupSet | Data element group set | |
+| Indicator | Indicator | numeratorDescription, denominatorDescription |
+| IndicatorType | Indicator type | |
+| IndicatorGroup | Indicator group | |
+| IndicatorGroupSet | Indicator group set | |
+| OrganisationUnit | Organisation unit | |
+| OrganisationUnitGroup | Organisation unit group | |
+| OrganisationUnitGroupSet | Organisation unit group set | |
+| DataSet | Data set | |
+| Section | Data set section | |
+| ValidationRule | Validation rule | instruction |
+| ValidationRuleGroup | Validation rule group | |
+| Program | Program | enrollmentDateLabel, incidentDateLabel |
+| ProgramStage | Program stage | executionDateLabel, dueDateLabel |
+| TrackedEntityAttribute | Tracked entity attribute | |
+| TrackedEntity | Tracked entity | |
+| RelationshipType | Relationship type for tracked entity instances | fromToName, toFromName |
+| OptionSet | Option set | |
+| Attribute | Attribute for metadata | |
+| ProgramNotificationTemplate | Program Notification template | subjectTemplate, messageTemplate |
+| ValidationNotificationTemplate | Validation Notification template | subjectTemplate, messageTemplate |
+| DataSetNotificationTemplate | DataSet Notification template | subjectTemplate, messageTemplate |
+| Visualization | Visualization | title, subtitle, rangeAxisLabel, baseLineLabel, targetLineLabel, domainAxisLabel |
+| ProgramRuleAction | Program Rule Actions | content |
+ 
 
 ### Get translations
 
