docs: translations for prediction and validationRule

--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -195,6 +195,8 @@ Table: Class names
 | DataSetNotificationTemplate | DataSet Notification template | subjectTemplate, messageTemplate |
 | Visualization | Visualization | title, subtitle, rangeAxisLabel, baseLineLabel, targetLineLabel, domainAxisLabel |
 | ProgramRuleAction | Program Rule Actions | content |
+| Predictor | Predictor | Name, ShortName, Description, Generator Description  |
+| ValidationRule | ValidationRule | Name, Description, Instruction, Leftside expression, Rightside expression |
 
 ## Internationalization { #webapi_i18n } 
 
