--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -15,11 +15,9 @@ representations are supported.
 
 ### Database content locales
 
-You can retrieve and create locales for the database content with GET and
-POST requests through the following resource. XML and JSON resource
-representations are supported.
+You can retrieve and create locales for the database content with GET and POST requests through the `dbLocales` resource. XML and JSON resource representations are supported. To POST data, there are two required parameters: `country` and `language`. 
 
-    /api/33/locales/db
+    /api/locales/dbLocales?country=US&language=en
 
 ## Translations { #webapi_translations } 
 
